--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ constantly==23.10.4
 cron-descriptor==1.4.3
 cryptography==43.0.0
 daphne==4.1.2
+defusedxml==0.8.0rc2
+distlib==0.3.8
 Django==5.0.7
 django-celery-beat==2.6.0
 django-celery-results==2.5.1
@@ -32,6 +34,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 dnspython==2.6.1
 eventlet==0.36.1
+filelock==3.15.4
 Flask==3.0.3
 greenlet==3.0.3
 humanize==4.10.0
@@ -44,11 +47,14 @@ kombu==5.3.7
 MarkupSafe==2.1.5
 MouseInfo==0.1.3
 msgpack==1.0.8
+oauthlib==3.2.2
 phonenumbers==8.13.40
 pillow==10.4.0
+platformdirs==4.2.2
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 PyAutoGUI==0.9.54
@@ -63,18 +69,24 @@ PyRect==0.2.0
 PyScreeze==0.1.30
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
+python3-openid==3.2.0
 pytweening==1.2.0
 pytz==2024.1
 pywhatkit==5.4
+pywin32==306
 qrcode==7.4.2
 razorpay==1.4.2
 redis==5.0.7
 reportlab==4.2.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 service-identity==24.1.0
 setuptools==71.1.0
 six==1.16.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
 soupsieve==2.5
 sqlparse==0.5.1
 tornado==6.4.1
@@ -85,6 +97,7 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 vine==5.1.0
+virtualenv==20.26.3
 wcwidth==0.2.13
 Werkzeug==3.0.3
 whitenoise==6.7.0
